--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "ts-node-dev": "^2.0.0"
   },
@@ -31,6 +32,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.8",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.15",
     "typescript": "^5.5.2"
   }
