--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.4.3",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
+    "stripe": "^16.2.0",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
